--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -121,3 +121,68 @@
     width: 80%;
   }
 }
+
+@media (min-width: 481px) and (max-width: 760px){
+  #header .navbar-header {
+    width: 24%;
+  }
+  #header .navbar-brand img {
+    width: 90%;
+    padding: 8px 0px;
+  }
+  #header .nav li {
+    margin: 0 0 5px 12px;
+  }
+  #header .affix .nav {
+    margin-top: 14px;
+  }
+  #intro .main-text h1 {
+    font-size: 52px;
+  }
+  #intro .main-text h2 {
+    font-size: 42px;
+  }
+  #about .side-left {
+    margin-right: 46px;
+  }
+  #services .content h2 {
+    font-size: 16px;
+  }
+  #portfolio .portfolio-items .mix {
+    width: 48%;
+  }
+  #portfolio .portfolio-items figure:hover a.link-left {
+    left: 28%;
+  }
+  #portfolio .portfolio-items figure:hover a.link-right {
+    right: 28%;
+  }
+  #why-chose .icon {
+    float: left;
+  }
+  #why-chose .content-left .box-left .content {
+    padding-left: 72px;
+    padding-right: 0px;
+  }
+  #why-chose .content-left .box-left .content h4 {
+    text-align: left;
+  }
+  #why-chose .content-left .box-left .content p {
+    text-align: left;
+  }
+  #why-chose .showcase-box {
+    margin-bottom: 150px;
+  }
+  #team .content .title h3 {
+    font-size: 30px;
+  }
+  #pricing .price-value {
+    left: 38%;
+  }
+  #pricing .btn {
+    left: 34%;
+  }
+  #contact .contact-form .controls input.contact_input {
+    width: 80%;
+  }
+}
