--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,7 @@ img {
 }
 #portfolio .portfolio-items figure .img img {
   max-width: 100%;
-  max-height: 100%
+  max-height: 100%;
   height: auto;
   vertical-align: middle;
 }
@@ -817,6 +817,7 @@ img {
 }
 #team .content .text {
   padding: 26px 24px;
+  height: 180px;
 }
 #team .content .text p {
   font-weight: 300;
